restructuing changing names and maven coordinates, refactoring, updated all versions, replaced class with test

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ buildNumber.properties
 .mvn/timing.properties
 /.settings/
 /.project
+ruta-german-novel-with-dkpro/TypeSystem.xml
+ruta-german-novel-with-dkpro/input/
