--- a/ruta-german-novel-with-dkpro/pom.xml
+++ b/ruta-german-novel-with-dkpro/pom.xml
@@ -1,210 +1,269 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. 
-  See the NOTICE file distributed with this work for additional information regarding copyright ownership. 
-  The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not 
-  use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
-  Unless required by applicable law or agreed to in writing, software distributed under the License is 
-  distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
-  See the License for the specific language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
+	license agreements. See the NOTICE file distributed with this work for additional 
+	information regarding copyright ownership. The ASF licenses this file to 
+	you under the Apache License, Version 2.0 (the "License"); you may not use 
+	this file except in compliance with the License. You may obtain a copy of 
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+	by applicable law or agreed to in writing, software distributed under the 
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+	OF ANY KIND, either express or implied. See the License for the specific 
+	language governing permissions and limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <artifactId>ruta-german-novel-with-dkpro</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>${project.artifactId}</name>
+	<artifactId>ruta-german-novel-with-dkpro</artifactId>
+	<name>${project.artifactId}</name>
 
-  <packaging>jar</packaging>
+	<parent>
+		<groupId>com.github.uima.ruta</groupId>
+		<artifactId>ruta-examples</artifactId>
+		<version>1.1.0-SNAPSHOT</version>
+	</parent>
 
-  <parent>
-    <groupId>org.apache.uima</groupId>
-    <artifactId>ruta-parent</artifactId>
-    <version>2.5.0</version>
-  </parent>
+	<properties>
+		<uima-version>2.10.2</uima-version>
+		<ruta-version>2.7.1-SNAPSHOT</ruta-version>
+		<dkpro-version>1.11.1</dkpro-version>
 
-  <properties>
-    <junit-version>4.11</junit-version>
-    <uima-version>2.9.0</uima-version>
-    <ruta-version>2.5.0</ruta-version>
-    <dkpro-version>1.8.0</dkpro-version>
-  </properties>
+		<junit-version>4.12</junit-version>
+	</properties>
 
-  <dependencies>
+	<dependencies>
+
+		<dependency>
+			<groupId>org.apache.uima</groupId>
+			<artifactId>ruta-core</artifactId>
+			<version>${ruta-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.uima</groupId>
+			<artifactId>ruta-core-ext</artifactId>
+			<version>${ruta-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-opennlp-asl</artifactId>
+			<version>${dkpro-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-stanfordnlp-gpl</artifactId>
+			<version>${dkpro-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit-version}</version>
+			</dependency>
+
+		</dependencies>
+	</dependencyManagement>
 
 
-    <dependency>
-      <groupId>org.apache.uima</groupId>
-      <artifactId>ruta-core</artifactId>
-      <version>${ruta-version}</version>
-    </dependency>
+	<build>
 
-    <dependency>
-      <groupId>org.apache.uima</groupId>
-      <artifactId>ruta-core-ext</artifactId>
-      <version>${ruta-version}</version>
-    </dependency>
+		<resources>
+			<resource>
+				<directory>src/main/ruta</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 
-    <dependency>
-      <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-      <artifactId>de.tudarmstadt.ukp.dkpro.core.opennlp-asl</artifactId>
-      <version>${dkpro-version}</version>
-    </dependency>
+			<plugin>
+				<groupId>org.apache.uima</groupId>
+				<artifactId>ruta-maven-plugin</artifactId>
+			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.uima</groupId>
+				<artifactId>jcasgen-maven-plugin</artifactId>
+				<version>${uima-version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<typeSystemIncludes>
+								<typeSystemInclude>target/generated-sources/ruta/descriptor/com/github/uima/ruta/novel/MainRutaTypeSystem.xml</typeSystemInclude>
+							</typeSystemIncludes>
+							<limitToProject>true</limitToProject>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
-    <dependency>
-      <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-      <artifactId>de.tudarmstadt.ukp.dkpro.core.stanfordnlp-gpl</artifactId>
-      <version>${dkpro-version}</version>
-    </dependency>
+		</plugins>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-  </dependencies>
-  <build>
-    <resources>
-      <resource>
-        <directory>src/main/ruta</directory>
-      </resource>
-      <resource>
-        <directory>src/main/resources</directory>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.uima</groupId>
-        <artifactId>ruta-maven-plugin</artifactId>
-        <version>${ruta-version}</version>
-        <executions>
-          <execution>
-            <id>descriptors</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-            <configuration>
-              <scriptFiles>
-                <directory>${basedir}/src/main/ruta</directory>
-                <includes>
-                  <include>**/*.ruta</include>
-                </includes>
-              </scriptFiles>
-              <typeSystemOutputDirectory>${project.build.directory}/generated-sources/ruta/descriptor</typeSystemOutputDirectory>
-              <analysisEngineOutputDirectory>${project.build.directory}/generated-sources/ruta/descriptor</analysisEngineOutputDirectory>
-              <analysisEngineTemplate>${basedir}/src/main/resources/org/apache/uima/ruta/novel/BasicEngine.xml</analysisEngineTemplate>
-              <analysisEngineSuffix>RutaAnnotator</analysisEngineSuffix>
-              <typeSystemSuffix>RutaTypeSystem</typeSystemSuffix>
-              <encoding>UTF-8</encoding>
-              <importByName>true</importByName>
-              <resolveImports>false</resolveImports>
-              <maxBuildRetries>-1</maxBuildRetries>
-              <extensionPackages>
-                <extensionPackage>org.apache.uima.ruta</extensionPackage>
-              </extensionPackages>
-              <addRutaNature>true</addRutaNature>
-              <buildPaths>
-                <buildPath>script:src/main/ruta/</buildPath>
-                <buildPath>descriptor:target/generated-sources/ruta/descriptor/</buildPath>
-                <buildPath>resources:src/main/resources/</buildPath>
-              </buildPaths>
-            </configuration>
-          </execution>
-          <execution>
-            <id>mtwl</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>mtwl</goal>
-            </goals>
-            <configuration>
-              <compress>true</compress>
-              <inputFiles>
-                <directory>${basedir}/src/main/resources/wordlists</directory>
-                <includes>
-                  <include>*.txt</include>
-                </includes>
-              </inputFiles>
-              <outputFile>${project.build.directory}/generated-sources/ruta/resources/generated.mtwl</outputFile>
-              <encoding>UTF-8</encoding>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.uima</groupId>
-        <artifactId>jcasgen-maven-plugin</artifactId>
-        <version>${uima-version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-            <configuration>
-              <typeSystemIncludes>
-                <typeSystemInclude>target/generated-sources/ruta/descriptor/org/apache/uima/ruta/novel/MainRutaTypeSystem.xml</typeSystemInclude>
-              </typeSystemIncludes>
-              <limitToProject>true</limitToProject>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>copy-desc</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <encoding>UTF-8</encoding>
-              <outputDirectory>${basedir}/target/classes</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${basedir}/target/generated-sources/ruta/descriptor</directory>
-                  <filtering>false</filtering>
-                  <includes>
-                    <include>**/*.xml</include>
-                  </includes>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>copy-ruta</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <encoding>UTF-8</encoding>
-              <outputDirectory>${basedir}/target/classes</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${basedir}/target/generated-sources/ruta/resources</directory>
-                  <filtering>false</filtering>
-                  <includes>
-                    <include>**/*.*</include>
-                  </includes>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.uima</groupId>
+					<artifactId>ruta-maven-plugin</artifactId>
+					<version>${ruta-version}</version>
+					<executions>
+						<execution>
+							<id>descriptors</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>generate</goal>
+							</goals>
+							<configuration>
+								<scriptFiles>
+									<directory>${basedir}/src/main/ruta</directory>
+									<includes>
+										<include>**/*.ruta</include>
+									</includes>
+								</scriptFiles>
+								<scriptPaths>
+									<scriptPath>${basedir}/src/main/ruta/</scriptPath>
+								</scriptPaths>
+								<resourcePaths>
+									<resourcePath>${basedir}/src/main/resources/</resourcePath>
+								</resourcePaths>
+								<analysisEngineTemplate>${basedir}/src/main/resources/com/github/uima/ruta/novel/BasicEngine.xml</analysisEngineTemplate>
+								<typeSystemOutputDirectory>${project.build.directory}/generated-sources/ruta/descriptor</typeSystemOutputDirectory>
+								<analysisEngineOutputDirectory>${project.build.directory}/generated-sources/ruta/descriptor</analysisEngineOutputDirectory>
+								<analysisEngineSuffix>RutaAnnotator</analysisEngineSuffix>
+								<typeSystemSuffix>RutaTypeSystem</typeSystemSuffix>
+								<encoding>UTF-8</encoding>
+								<importByName>true</importByName>
+								<resolveImports>false</resolveImports>
+								<maxBuildRetries>-1</maxBuildRetries>
+								<extensionPackages>
+									<extensionPackage>org.apache.uima.ruta</extensionPackage>
+								</extensionPackages>
+								<addRutaNature>true</addRutaNature>
+								<buildPaths>
+									<buildPath>script:src/main/ruta</buildPath>
+									<buildPath>descriptor:target/generated-sources/ruta/descriptor</buildPath>
+									<buildPath>resources:src/main/resources</buildPath>
+								</buildPaths>
+							</configuration>
+						</execution>
+						<execution>
+							<id>mtwl</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>mtwl</goal>
+							</goals>
+							<configuration>
+								<compress>true</compress>
+								<inputFiles>
+									<directory>${basedir}/src/main/resources/wordlists</directory>
+									<includes>
+										<include>**/*.txt</include>
+									</includes>
+								</inputFiles>
+								<outputFile>${project.build.directory}/generated-sources/ruta/resources/wordlists/german_novel.mtwl</outputFile>
+								<encoding>UTF-8</encoding>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.uima</groupId>
+					<artifactId>jcasgen-maven-plugin</artifactId>
+					<executions>
+						<execution>
+							<goals>
+								<goal>generate</goal>
+							</goals>
+							<configuration>
+								<typeSystemIncludes>
+									<typeSystemInclude>target/generated-sources/ruta/descriptor/com/github/uima/ruta/novel/MainRutaTypeSystem.xml</typeSystemInclude>
+								</typeSystemIncludes>
+								<typeSystemExcludes>
+									<typeSystemExclude>/**/BasicTypeSystem.xml</typeSystemExclude>
+									<typeSystemExclude>/**/InternalTypeSystem.xml</typeSystemExclude>
+								</typeSystemExcludes>
+								<limitToProject>true</limitToProject>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>copy-desc</id>
+							<phase>process-resources</phase>
+							<goals>
+								<goal>copy-resources</goal>
+							</goals>
+							<configuration>
+								<encoding>UTF-8</encoding>
+								<outputDirectory>${basedir}/target/classes</outputDirectory>
+								<resources>
+									<resource>
+										<directory>${basedir}/target/generated-sources/ruta/descriptor</directory>
+										<filtering>false</filtering>
+										<includes>
+											<include>**/*.xml</include>
+										</includes>
+									</resource>
+								</resources>
+							</configuration>
+						</execution>
+						<execution>
+							<id>copy-ruta</id>
+							<phase>process-resources</phase>
+							<goals>
+								<goal>copy-resources</goal>
+							</goals>
+							<configuration>
+								<encoding>UTF-8</encoding>
+								<outputDirectory>${basedir}/target/classes</outputDirectory>
+								<resources>
+									<resource>
+										<directory>${basedir}/target/generated-sources/ruta/resources</directory>
+										<filtering>false</filtering>
+										<includes>
+											<include>**/*.*</include>
+										</includes>
+									</resource>
+								</resources>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
